--- a/.github/workflows/charts-release.yaml
+++ b/.github/workflows/charts-release.yaml
@@ -71,10 +71,10 @@ jobs:
         if: github.event_name == 'push' && needs.check_changes.outputs.changes_detected == 'true'
         uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4
         with:
-          key: ${{ env.CHANGELOG_CACHE_KEY }}-${{ hashFiles '**/Chart.yaml' }}
+          key: ${{ env.CHANGELOG_CACHE_KEY }}-${{ hashFiles('**/Chart.yaml') }}
           path: changelog.json.gz
           restore-keys: |
-            ${{ env.CHANGELOG_CACHE_KEY }}-${{ hashFiles '**/Chart.yaml' }}
+            ${{ env.CHANGELOG_CACHE_KEY }}-${{ hashFiles('**/Chart.yaml') }}
             ${{ env.CHANGELOG_CACHE_KEY }}-
 
 
