fix(traefik): Add internals metrics

--- a/charts/premium/traefik/values.yaml
+++ b/charts/premium/traefik/values.yaml
@@ -120,6 +120,7 @@ metrics:
   main:
     enabled: true
     type: servicemonitor
+    addInternals: true
     endpoints:
       - port: metrics
         path: /metrics
