feat(clustertool): done make releases as draft

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -39,7 +39,7 @@ release:
   github:
     owner: truecharts
     name: public
-  draft: true
+  draft: false
   make_latest: false
   mode: append
 
