fix(ci): revent duplicate issues being dunked into goreleaser changelog

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -32,8 +32,8 @@ changelog:
       - "^test"
     include:
       - "clustertool"
-      - "clustertool"
       - "Clustertool"
+      - "ClusterTool"
 release:
   name_template: "{{.ProjectName}}-{{.Tag}}"
   github:
