--- a/clustertool/embed/generic/kubernetes/apps/kubernetes-dashboard/app/helm-release.yaml
+++ b/clustertool/embed/generic/kubernetes/apps/kubernetes-dashboard/app/helm-release.yaml
@@ -30,7 +30,7 @@ spec:
   values:
     service:
       main:
-        type: '{{ if ne "${DASHBOARD_IP}" "" }}LoadBalancer{{ else }}ClusterIP{{ end }}'
+        type: LoadBalancer
         loadBalancerIP: ${DASHBOARD_IP}
         ports:
           main:
