--- a/clustertool/embed/generic/kubernetes/system/spegel/app/helm-release.yaml
+++ b/clustertool/embed/generic/kubernetes/system/spegel/app/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: spegel
-      version: 2.0.3
+      version: 2.0.2
       sourceRef:
         kind: HelmRepository
         name: truecharts
@@ -23,8 +23,4 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
-  values:
-      service:
-        main:
-          type: '{{ if ne "${SPEGEL_IP}" "" }}LoadBalancer{{ else }}ClusterIP{{ end }}'
-          loadBalancerIP: ${SPEGEL_IP}
+  values: {}
