--- a/clustertool/embed/generic/patches/all.yaml
+++ b/clustertool/embed/generic/patches/all.yaml
@@ -49,42 +49,11 @@
     fs.inotify.max_user_watches: "524288"
     net.core.rmem_max: "2500000"
     net.core.wmem_max: "2500000"
-
-## TODO: Check how we can have this pass checks
-# - op: add
-#   path: /machine/udev
-#   value:
-#     # Thunderbolt
-#     - ACTION=="add", SUBSYSTEM=="thunderbolt", ATTR{authorized}=="0", ATTR{authorized}="1"
-#     # Intel GPU
-#     - SUBSYSTEM=="drm", KERNEL=="renderD*", GROUP="44", MODE="0660"
-#     # Google Coral USB Accelerator
-#     - SUBSYSTEMS=="usb", ATTRS{idVendor}=="1a6e", ATTRS{idProduct}=="089a", GROUP="20", MODE="0660"
-#     - SUBSYSTEMS=="usb", ATTRS{idVendor}=="18d1", ATTRS{idProduct}=="9302", GROUP="20", MODE="0660"
-
-- op: add
-  path: /machine/files
+- op: replace
+  path: /cluster/discovery/registries/kubernetes
   value:
-    - content: |-
-        [plugins."io.containerd.grpc.v1.cri"]
-          enable_unprivileged_ports = true
-          enable_unprivileged_icmp = true
-        [plugins."io.containerd.grpc.v1.cri".containerd]
-          discard_unpacked_layers = false
-        [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc]
-          discard_unpacked_layers = false
-      permissions: 0
-      path: /etc/cri/conf.d/20-customization.part
-      op: create
-    - content: |-
-        [ NFSMount_Global_Options ]
-        nfsvers=4.2
-        hard=True
-        noatime=True
-        nodiratime=True
-        rsize=131072
-        wsize=131072
-        nconnect=8
-      permissions: 420
-      path: /etc/nfsmount.conf
-      op: overwrite
+    disabled: false
+- op: replace
+  path: /cluster/discovery/registries/service
+  value:
+    disabled: false
