fix(spegel): always enabled storage
Signed-off-by: Kjeld Schouten <info@kjeldschouten.nl>

--- a/charts/incubator/spegel/values.yaml
+++ b/charts/incubator/spegel/values.yaml
@@ -104,14 +104,14 @@ persistence:
     hostPath: "{{ .Values.spegel.containerdSock }}"
     hostPathType: Socket
   containerd-content:
-    enabled: "{{ if .Values.spegel.containerdContentPath }}true{{else}}false{{end}}}}"
+    enabled: true
     type: hostPath
     mountPath: "{{ .Values.spegel.containerdContentPath }}"
     hostPath: "{{ .Values.spegel.containerdContentPath }}"
     hostPathType: Directory
     readOnly: true
   containerd-config:
-    enabled: "{{ if .Values.spegel.containerdMirrorAdd }}true{{else}}false{{end}}}}"
+    enabled: true
     type: hostPath
     mountPath: "{{ .Values.spegel.containerdRegistryConfigPath }}"
     hostPath: "{{ .Values.spegel.containerdRegistryConfigPath }}"
