--- a/clustertool/embed/generic/kubernetes/kube-system/cilium/app/helm-release.yaml
+++ b/clustertool/embed/generic/kubernetes/kube-system/cilium/app/helm-release.yaml
@@ -21,6 +21,8 @@ spec:
             interval: 15m
     timeout: 20m
     maxHistory: 3
+  driftDetection:
+    mode: warn
     install:
         remediation:
             retries: 3
