--- a/.github/renovate/updates/major.json5
+++ b/.github/renovate/updates/major.json5
@@ -1,8 +1,7 @@
 {
       "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "major": {
-    "enabled": true, // Enable minor updates
-    "autoApprove": false
+    "enabled": true,
   },
   "ignore": [
     // Add any paths or patterns to ignore specific minor updates, if necessary
