--- a/.github/renovate/updates/major.json5
+++ b/.github/renovate/updates/major.json5
@@ -2,17 +2,9 @@
       "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "major": {
     "enabled": true,
+    "dependencyDashboardApproval: true,
   },
   "ignore": [
     // Add any paths or patterns to ignore specific minor updates, if necessary
   ],
-  "packageRules": [
-    {
-      "matchVersion": "^\\d{4}\\.\\d{1,2}(\\.\\d{1,2})?$",
-      "excludePackagePatterns": ["*"],
-      "enabled": false,
-      "matchUpdateTypes": ["major"],
-      dependencyDashboardApproval: true,
-    }
-  ]
 }
