--- a/.github/renovate/updates/major.json5
+++ b/.github/renovate/updates/major.json5
@@ -2,7 +2,7 @@
       "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "major": {
     "enabled": true,
-    "dependencyDashboardApproval: true,
+    "dependencyDashboardApproval": true,
   },
   "ignore": [
     // Add any paths or patterns to ignore specific minor updates, if necessary
