--- a/charts/stable/palworld/values.yaml
+++ b/charts/stable/palworld/values.yaml
@@ -2,10 +2,6 @@ image:
   repository: ghcr.io/ich777/steamcmd
   pullPolicy: IfNotPresent
   tag: palworld@sha256:e1ba071929359d54b1a9e139f62d90f30ff0ab9fce1d2093d28f9bd82dbe9913
-rconImage:
-  repository: docker.io/outdead/rcon
-  pullPolicy: IfNotPresent
-  tag: latest@sha256:f4ab6d4f86525e2d71534b839cc4e2241ffc9278759f7a70ef3aa434c5aec927
 
 securityContext:
   container:
@@ -67,9 +63,9 @@ workload:
             - -c
           args:
             - |
-              config={{ .Values.persistence.serverfiles.targetSelector.main.main.mountPath }}/Pal/Saved/Config/LinuxServer
-              cfgFile=${config}/PalWorldSettings.ini
-              dfCfgFile={{ .Values.persistence.serverfiles.targetSelector.main.main.mountPath }}/DefaultPalWorldSettings.ini
+              config="{{ .Values.persistence.serverfiles.targetSelector.main.main.mountPath }}/Pal/Saved/Config/LinuxServer"
+              cfgFile="${config}/PalWorldSettings.ini"
+              dfCfgFile="{{ .Values.persistence.serverfiles.targetSelector.main.main.mountPath }}/DefaultPalWorldSettings.ini"
               game_values="{{ .Values.palworld.game }}"
 
               mkdir -p ${config}
