--- a/charts/stable/palworld/values.yaml
+++ b/charts/stable/palworld/values.yaml
@@ -63,10 +63,11 @@ workload:
             - -c
           args:
             - |
-              config="{{ .Values.persistence.serverfiles.targetSelector.main.main.mountPath }}/Pal/Saved/Config/LinuxServer"
-              cfgFile="${config}/PalWorldSettings.ini"
-              dfCfgFile="{{ .Values.persistence.serverfiles.targetSelector.main.main.mountPath }}/DefaultPalWorldSettings.ini"
-              game_values="{{ .Values.palworld.game }}"
+              serverfiles={{ .Values.persistence.serverfiles.targetSelector.main.main.mountPath }}
+              config=${serverfiles}/Pal/Saved/Config/LinuxServer
+              cfgFile=${config}/PalWorldSettings.ini
+              dfCfgFile=${serverfiles}/DefaultPalWorldSettings.ini
+              game_values={{ .Values.palworld.game }}
 
               mkdir -p ${config}
               if [ ! -f "${cfgFile}" ]; then
