feat(mc-router) update chart and rename to minecraft-router

--- a/charts/stable/minecraft-router/Chart.yaml
+++ b/charts/stable/minecraft-router/Chart.yaml
@@ -20,6 +20,7 @@ description: Lightweight multiplexer/proxy for Minecraft-Java servers.
 home: https://truecharts.org/charts/stable/mc-router
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/mc-router.webp
 keywords:
+  - minecraft-router
   - mc-router
   - minecraft
 kubeVersion: '>=1.24.0-0'
@@ -27,7 +28,7 @@ maintainers:
   - name: TrueCharts
     email: info@truecharts.org
     url: https://truecharts.org
-name: mc-router
+name: minecraft-router
 sources:
   - https://github.com/itzg/mc-router
   - https://github.com/truecharts/charts/tree/master/charts/stable/mc-router
