--- a/charts/stable/minecraft-router/values.yaml
+++ b/charts/stable/minecraft-router/values.yaml
@@ -17,15 +17,8 @@ service:
 mcrouter:
   default-server: vanilla:25565
   mappings:
-    vanilla.example.com: vanilla:25565
-    forge.example.com: forge:25565
-
-configmap:
-  config:
-    enabled: true
-    data:
-      config.json:
-        {{ toJson .Values.mcrouter }}
+    - vanilla:25565
+    - forge:25565
 
 workload:
   main:
@@ -35,22 +28,18 @@ workload:
           probes:
             liveness:
               enabled: true
+              type: tcp
             readiness:
               enabled: true
+              type: tcp
             startup:
               enabled: true
+              type: tcp
           env:
-            API_BINDING: ":{{ .Values.service.main.ports.main.port }}"
-            PORT: "{{ .Values.service.minecraft.ports.minecraft.port }}"
-            ROUTES_CONFIG: "{{ .Values.persistence.config.mountPath }}"
-
-persistence:
-  config:
-    enabled: true
-    type: configmap
-    objectName: config
-    mountPath: /config/config.json
-    subPath: config.json
+            API_BINDING: ":{{ .Values.service.api.ports.api.port }}"
+            PORT: "{{ .Values.service.main.ports.main.port }}"
+            DEFAULT: "{{ .Values.mcrouter.default-server }}"
+            MAPPING: "{{ join "," .Values.mcrouter.mappings }}"
 
 portal:
   open:
